Removed extra tag in heading

--- a/HTML/generations.html
+++ b/HTML/generations.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en"><head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<html lang="en">
+    <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Pokemeon Generations</title>
@@ -14,6 +14,7 @@
             </ul>
                 <figure>
                     <img src="images/gen_1.png">
+                    <figcaption>The Boxart for Gen 1</figcaption>
                 </figure>
             <ul>
                 <li>2nd Gen - Pokemon Gold, Silver, and Crystal</li>
