--- a/HTML/generations.html
+++ b/HTML/generations.html
@@ -4,6 +4,20 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Pokemeon Generations</title>
+    </head>
+    <nav>
+        <ul>
+            <li>
+                <a href="start.html">Guide</a>
+            </li>
+            <li>
+                <a href="generations.html">Generations</a>
+            </li>
+            <li>
+                <a href="starters.html">Starters</a>
+            </li>
+        </ul>
+    </nav>
     <body>
         <h2>What's a 'Gen?'</h2>
             <p>
@@ -72,4 +86,6 @@
                 features that make leveling Pokemon and other actions more convenient, but 
                 there's a lot to be said for starting with the basics.
             </p>
+    </body>
+</html>
                 
