--- a/HTML/start.html
+++ b/HTML/start.html
@@ -5,6 +5,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Project 1 - The Pokemon Trainer's Guide</title>
     </head>
+    <nav>
+        <ul>
+            <li>
+                <a href="start.html">Guide</a>
+            </li>
+            <li>
+                <a href="generations.html">Generations</a>
+            </li>
+            <li>
+                <a href="starters.html">Starters</a>
+            </li>
+        </ul>
+    </nav>
     <body>
         <header>
             <h1>The Pokemon Trainer's Guide</h1>
@@ -87,34 +100,6 @@
                 Two of them receive the starter Pokémon in an arrangement similar to 
                 Pokémon Black and White, but the other two have completely different 
                 Pokémon.
-            </p>
-            <h2>How to Pick a Starter Pokemon</h2>
-            <p>
-                Starter Pokémon, or Starters, are the Pokémon a Trainer chooses at the 
-                beginning of their Pokémon journey and the main protagonists of the Pokémon 
-                series of games. In each generation of Pokémon games, a set of Starter Pokémon 
-                are available for new Trainers to choose from in sets of three; the types that 
-                make up these sets are Fire, Grass, and Water. Each starter Pokémon has three 
-                evolutionary forms.
-                Picking a Pokémon to start off any game can be difficult. But There
-                are no "right" starter Pokemon to choose.
-            </p>
-            <p>
-                Before picking a starter, onsider your play style and game type.
-                If you choose melee, go for the fire-type. They can learn many strong melee moves.
-                If you go for tactical (ranged, in other games) then choose water-type. 
-                They are very good at not making melee contact with enemies, 
-                giving them an advantage over Pokémon that rely on abilities like rough skin.
-                If you prefer taking advantage of the enemies' weaknesses, then use the 
-                grass-type. They have moves such as leech seed that drain equal 
-                amounts of health regardless of type and level.
-            </p>
-            <p>
-                If the starter Pokémon, after evolving, gets an additional type for itself 
-                (like Charmeleon gets Fire and Flying-type after it evolves into Charizard 
-                and Mudkip gets Water and Ground-type after it evolves into a Marshtomp), 
-                you may think about preferring that Pokémon because it may cover up many of 
-                its weaknesses.
             </p>
             <h2>Keep Your Pokemon Healed!</h2>
             <p>
