Fixed some tags

--- a/HTML/generations.html
+++ b/HTML/generations.html
@@ -5,6 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Pokemeon Generations</title>
     </head>
+    <body>
+    <header>
+        <h1>What's a 'Gen?'</h1>
+    </header>
     <nav>
         <ul>
             <li>
@@ -18,8 +22,6 @@
             </li>
         </ul>
     </nav>
-    <body>
-        <h2>What's a 'Gen?'</h2>
             <p>
                 "Gen" is short for "generation" and refers to the time period in which a specific game was released.
             </p>
