--- a/HTML/starters.html
+++ b/HTML/starters.html
@@ -5,6 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Pokemeon Starters</title>
     </head>
+    <body>
+    <header>
+        <h1>How to Pick a Starter Pokemon</h1>
+    </header>
     <nav>
         <ul>
             <li>
@@ -18,8 +22,7 @@
             </li>
         </ul>
     </nav>
-    <body>
-        <h2>How to Pick a Starter Pokemon</h2>
+  
             <p>
                 Starter Pokémon, or Starters, are the Pokémon a Trainer chooses at the 
                 beginning of their Pokémon journey and the main protagonists of the Pokémon 
