Added pokemon pic

--- a/HTML/start.html
+++ b/HTML/start.html
@@ -25,6 +25,10 @@
 
             <article>
                 <h2>What is Pokemon?</h2>
+                <figure>
+                    <img src="../images/pokemon.png">
+                    <figcaption>Pokemon Logo</figcaption>
+                </figure>
                 <p>
                     Pokémon executive director Satoshi Tajiri first thought of Pokémon, 
                     albeit with a different concept and name, around 1989, 
