Final commit before thursday

--- a/HTML/start.html
+++ b/HTML/start.html
@@ -26,7 +26,7 @@
             <article>
                 <h2>What is Pokemon?</h2>
                 <figure>
-                    <img src="../images/pokemon.png">
+                    <img src="../images/logo.png">
                     <figcaption>Pokemon Logo</figcaption>
                 </figure>
                 <p>
