html up to date 10/20

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="start.html">Guide</a>
+                    <a href="index.html">Guide</a>
                 </li>
                 <li>
                     <a href="generations.html">Generations</a>
