--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Project 1 - The Pokemon Trainer's Guide</title>
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/navigation.css">
     </head>
     <header>
         <h1>The Pokemon Trainer's Guide</h1>
