--- a/HTML/generations.html
+++ b/HTML/generations.html
@@ -4,10 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Pokemeon Generations</title>
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/navigation.css">
+        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="../css/navigation.css">
     </head>
     <body>
+    <div class ="container">
     <header>
         <h1>What's a 'Gen?'</h1>
     </header>
@@ -90,6 +91,7 @@
                 features that make leveling Pokemon and other actions more convenient, but 
                 there's a lot to be said for starting with the basics.
             </p>
+    </div>
     </body>
 </html>
                 
