--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,9 +4,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Project 1 - The Pokemon Trainer's Guide</title>
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/navigation.css">
+        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="../css/navigation.css">
     </head>
+    <div class = "container">
     <header>
         <h1>The Pokemon Trainer's Guide</h1>
     </header>
@@ -171,4 +172,5 @@
                 </p>
             </footer>        
     </body>
+    </div>
 </html>
