--- a/HTML/starters.html
+++ b/HTML/starters.html
@@ -4,10 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Pokemeon Starters</title>
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/navigation.css">
+        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="../css/navigation.css">
     </head>
     <body>
+    </div class = "container">
     <header>
         <h1>How to Pick a Starter Pokemon</h1>
     </header>
@@ -55,5 +56,6 @@
                     you may think about preferring that Pokémon because it may cover up many of 
                     its weaknesses.
                 </p>
+    </div>
     </body>
 </html>
