--- a/HTML/generations.html
+++ b/HTML/generations.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Pokemeon Generations</title>
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="../css/sub_style.css">
         <link rel="stylesheet" href="../css/navigation.css">
     </head>
     <body>
@@ -25,6 +25,7 @@
             </li>
         </ul>
     </nav>
+        <section>
             <p>
                 "Gen" is short for "generation" and refers to the time period in which a specific game was released.
             </p>
@@ -78,6 +79,8 @@
                     </figure>
                 </li>
             </ul>
+        </section>
+        <article>
             <p>
                 Each generation brought new features, new Pokemon, and added new ways for 
                 Pokemon to battle and for you to develop your relationship with them. 
@@ -91,6 +94,7 @@
                 features that make leveling Pokemon and other actions more convenient, but 
                 there's a lot to be said for starting with the basics.
             </p>
+        <article>
     </div>
     </body>
 </html>
