--- a/HTML/starters.html
+++ b/HTML/starters.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Pokemeon Starters</title>
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="../css/sub_style.css">
         <link rel="stylesheet" href="../css/navigation.css">
     </head>
     <body>
