Moved html docs out of html fodler and removed html fodler, changed all relevant links to remove the ../

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Project 1 - The Pokemon Trainer's Guide</title>
-        <link rel="stylesheet" href="../css/home_style.css">
-        <link rel="stylesheet" href="../css/navigation.css">
+        <link rel="stylesheet" href="css/home_style.css">
+        <link rel="stylesheet" href="css/navigation.css">
     </head>
     <div class = "container">
     <header>
@@ -29,7 +29,7 @@
             <article>
                 <h2>What is Pokemon?</h2>
                 <figure>
-                    <img src="../images/logo.png">
+                    <img src="images/logo.png">
                     <figcaption>Pokemon Logo</figcaption>
                 </figure>
                 <p>
