--- a/generations.html
+++ b/generations.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Pokemeon Generations</title>
-        <link rel="stylesheet" href="../css/sub_style.css">
-        <link rel="stylesheet" href="../css/navigation.css">
+        <link rel="stylesheet" href="css/sub_style.css">
+        <link rel="stylesheet" href="css/navigation.css">
     </head>
     <body>
     <div class ="container">
@@ -32,49 +32,49 @@
             <ul>
                 <li>1st Gen - Pokemon Red, Blue, Yellow, and Green (Japan Only)
                     <figure>
-                        <img src="../images/gen_1.png">
+                        <img src="images/gen_1.png">
                         <figcaption>The Boxart for Gen 1</figcaption>
                     </figure>
                 </li>
                 <li>2nd Gen - Pokemon Gold, Silver, and Crystal
                     <figure>
-                        <img src="../images/gen_2.png">
+                        <img src="images/gen_2.png">
                         <figcaption>The Boxart for Gen 2</figcaption>
                     </figure>
                 </li>
                 <li>3rd Gen - Pokemon Ruby, Sapphire, and Emerald (Including Omega Ruby and Alpha Sapphire)
                     <figure>
-                        <img src="../images/gen_3.png">
+                        <img src="images/gen_3.png">
                         <figcaption>The Boxart for Gen 3</figcaption>
                     </figure>
                 </li>
                 <li>4th Gen - Pokemon Diamond, Pearl, and Platinum
                     <figure>
-                        <img src="../images/gen_4.png">
+                        <img src="images/gen_4.png">
                         <figcaption>The Boxart for Gen 4</figcaption>
                     </figure>
                 </li>
                 <li>5th Gen - Pokemon Black, White, Black 2, and White 2
                     <figure>
-                        <img src="../images/gen_5.png">
+                        <img src="images/gen_5.png">
                         <figcaption>The Boxart for Gen 5</figcaption>
                     </figure>
                 </li> 
                 <li>6th Gen - Pokemon X and Y
                     <figure>
-                        <img src="../images/gen_6.png">
+                        <img src="images/gen_6.png">
                         <figcaption>The Boxart for Gen 6</figcaption>
                     </figure>
                 </li>  
                 <li>7th Gen - Pokemon Sun and Moon
                     <figure>
-                        <img src="../images/gen_7.png">
+                        <img src="images/gen_7.png">
                         <figcaption>The Boxart for Gen 7</figcaption>
                     </figure>
                 </li>
                 <li>8th Gen - Pokemon Sword and Shield
                     <figure>
-                        <img src="../images/gen_8.png">
+                        <img src="images/gen_8.png">
                         <figcaption>The Boxart for Gen 8</figcaption>
                     </figure>
                 </li>
