--- a/starters.html
+++ b/starters.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Pokemeon Starters</title>
-        <link rel="stylesheet" href="../css/sub_style.css">
-        <link rel="stylesheet" href="../css/navigation.css">
+        <link rel="stylesheet" href="css/sub_style.css">
+        <link rel="stylesheet" href="css/navigation.css">
     </head>
     <body>
     </div class = "container">
@@ -25,10 +25,13 @@
             </li>
         </ul>
     </nav>
+        <section>
         <figure>
-            <img src="../images/starters.png">
+            <img src="images/starters.png">
             <figcaption>Pokemon Logo</figcaption>
         </figure>
+        </section>
+        <article>
                 <p>
                     Starter Pokémon, or Starters, are the Pokémon a Trainer chooses at the 
                     beginning of their Pokémon journey and the main protagonists of the Pokémon 
@@ -56,6 +59,7 @@
                     you may think about preferring that Pokémon because it may cover up many of 
                     its weaknesses.
                 </p>
+        </article>
     </div>
     </body>
 </html>
