--- a/generations.html
+++ b/generations.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Pokemeon Generations</title>
+        <link rel="stylesheet" href="css/all_style.css">
         <link rel="stylesheet" href="css/sub_style.css">
         <link rel="stylesheet" href="css/navigation.css">
     </head>
