--- a/starters.html
+++ b/starters.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="css/navigation.css">
     </head>
     <body>
-    </div class = "container">
+    <div class = "container">
     <header>
         <h1>How to Pick a Starter Pokemon</h1>
     </header>
