--- a/generations.html
+++ b/generations.html
@@ -13,7 +13,7 @@
     <header>
         <h1>What's a 'Gen?'</h1>
     </header>
-    <nav>
+    <nav class = "menu">
         <ul>
             <li>
                 <a href="index.html">Guide</a>
