--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <h1>The Pokemon Trainer's Guide</h1>
     </header>
-        <nav>
+        <nav class = "menu">
             <ul>
                 <li>
                     <a href="index.html">Guide</a>
