--- a/starters.html
+++ b/starters.html
@@ -13,7 +13,7 @@
     <header>
         <h1>How to Pick a Starter Pokemon</h1>
     </header>
-    <nav>
+    <nav class = "menu">
         <ul>
             <li>
                 <a href="index.html">Guide</a>
