Fixed Pokemon Logo Size
It now fits the container width

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <article>
                 <h2>What is Pokemon?</h2>
                 <figure>
-                    <img src="images/logo.png">
+                    <img  id="pokemonLogo" src="images/logo.png">
                 </figure>
                 <p>
                     Pokémon executive director Satoshi Tajiri first thought of Pokémon, 
