Created table class and in page navigtion for generations

--- a/generations.html
+++ b/generations.html
@@ -26,24 +26,37 @@
             </li>
         </ul>
     </nav>
+    <nav class = "table">
+        <ul>
+            <li>
+                <a href="/gen1">Gen 1</a>
+            </li>
+            <li>
+                <a href="/gen2">Gen 2</a>
+            </li>
+            <li>
+                <a href="/gen3">Gen 3</a>
+            </li>
+        </ul>
+    </nav>
         <section>
             <p>
                 "Gen" is short for "generation" and refers to the time period in which a specific game was released.
             </p>
             <ul>
-                <li>1st Gen - Pokemon Red, Blue, Yellow, and Green (Japan Only)
+                <li id="gen1">1st Gen - Pokemon Red, Blue, Yellow, and Green (Japan Only)
                     <figure>
                         <img src="images/gen_1.png">
                         <figcaption>The Boxart for Gen 1</figcaption>
                     </figure>
                 </li>
-                <li>2nd Gen - Pokemon Gold, Silver, and Crystal
+                <li id="gen2">2nd Gen - Pokemon Gold, Silver, and Crystal
                     <figure>
                         <img src="images/gen_2.png">
                         <figcaption>The Boxart for Gen 2</figcaption>
                     </figure>
                 </li>
-                <li>3rd Gen - Pokemon Ruby, Sapphire, and Emerald (Including Omega Ruby and Alpha Sapphire)
+                <li id="gen3">3rd Gen - Pokemon Ruby, Sapphire, and Emerald (Including Omega Ruby and Alpha Sapphire)
                     <figure>
                         <img src="images/gen_3.png">
                         <figcaption>The Boxart for Gen 3</figcaption>
