Compelted generations in page nav

--- a/generations.html
+++ b/generations.html
@@ -29,13 +29,28 @@
     <nav class = "table">
         <ul>
             <li>
-                <a href="/gen1">Gen 1</a>
+                <a href="#gen1">Gen 1</a>
             </li>
             <li>
-                <a href="/gen2">Gen 2</a>
+                <a href="#gen2">Gen 2</a>
             </li>
             <li>
-                <a href="/gen3">Gen 3</a>
+                <a href="#gen3">Gen 3</a>
+            </li>
+            <li>
+                <a href="#gen4">Gen 4</a>
+            </li>
+            <li>
+                <a href="#gen5">Gen 5</a>
+            </li>
+            <li>
+                <a href="#gen6">Gen 6</a>
+            </li>
+            <li>
+                <a href="#gen7">Gen 7</a>
+            </li>
+            <li>
+                <a href="#gen8">Gen 8</a>
             </li>
         </ul>
     </nav>
@@ -62,31 +77,31 @@
                         <figcaption>The Boxart for Gen 3</figcaption>
                     </figure>
                 </li>
-                <li>4th Gen - Pokemon Diamond, Pearl, and Platinum
+                <li id="gen4">4th Gen - Pokemon Diamond, Pearl, and Platinum
                     <figure>
                         <img src="images/gen_4.png">
                         <figcaption>The Boxart for Gen 4</figcaption>
                     </figure>
                 </li>
-                <li>5th Gen - Pokemon Black, White, Black 2, and White 2
+                <li id="gen5">5th Gen - Pokemon Black, White, Black 2, and White 2
                     <figure>
                         <img src="images/gen_5.png">
                         <figcaption>The Boxart for Gen 5</figcaption>
                     </figure>
                 </li> 
-                <li>6th Gen - Pokemon X and Y
+                <li id="gen6">6th Gen - Pokemon X and Y
                     <figure>
                         <img src="images/gen_6.png">
                         <figcaption>The Boxart for Gen 6</figcaption>
                     </figure>
                 </li>  
-                <li>7th Gen - Pokemon Sun and Moon
+                <lli id="gen7">7th Gen - Pokemon Sun and Moon
                     <figure>
                         <img src="images/gen_7.png">
                         <figcaption>The Boxart for Gen 7</figcaption>
                     </figure>
                 </li>
-                <li>8th Gen - Pokemon Sword and Shield
+                <li id="gen8">8th Gen - Pokemon Sword and Shield
                     <figure>
                         <img src="images/gen_8.png">
                         <figcaption>The Boxart for Gen 8</figcaption>
