--- a/generations.html
+++ b/generations.html
@@ -1,65 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Pokemeon Generations</title>
-        <link rel="stylesheet" href="css/all_style.css">
-        <link rel="stylesheet" href="css/sub_style.css">
-        <link rel="stylesheet" href="css/navigation.css">
-    </head>
-    <body>
-    <div class ="container">
-    <header>
-        <h1>What's a 'Gen?'</h1>
-    </header>
-    <nav class = "menu">
-        <ul>
-            <li>
-                <a href="index.html">Guide</a>
-            </li>
-            <li>
-                <a href="generations.html">Generations</a>
-            </li>
-            <li>
-                <a href="starters.html">Starters</a>
-            </li>
-        </ul>
-    </nav>
-    <nav class = "table">
-        <ul>
-            <li>
-                <a href="#gen1">Gen 1</a>
-            </li>
-            <li>
-                <a href="#gen2">Gen 2</a>
-            </li>
-            <li>
-                <a href="#gen3">Gen 3</a>
-            </li>
-            <li>
-                <a href="#gen4">Gen 4</a>
-            </li>
-            <li>
-                <a href="#gen5">Gen 5</a>
-            </li>
-            <li>
-                <a href="#gen6">Gen 6</a>
-            </li>
-            <li>
-                <a href="#gen7">Gen 7</a>
-            </li>
-            <li>
-                <a href="#gen8">Gen 8</a>
-            </li>
-        </ul>
-    </nav>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pokemeon Generations</title>
+    <link rel="stylesheet" href="css/all_style.css">
+    <link rel="stylesheet" href="css/sub_style.css">
+    <link rel="stylesheet" href="css/navigation.css">
+</head>
+
+<body>
+    <div class="container">
+        <header>
+            <h1>What's a 'Gen?'</h1>
+        </header>
+        <nav class="menu">
+            <ul>
+                <li>
+                    <a href="index.html">Guide</a>
+                </li>
+                <li>
+                    <a href="generations.html">Generations</a>
+                </li>
+                <li>
+                    <a href="starters.html">Starters</a>
+                </li>
+            </ul>
+        </nav>
+        <nav class="table">
+            <ul>
+                <li>
+                    <a href="#gen1">Gen 1</a>
+                </li>
+                <li>
+                    <a href="#gen2">Gen 2</a>
+                </li>
+                <li>
+                    <a href="#gen3">Gen 3</a>
+                </li>
+                <li>
+                    <a href="#gen4">Gen 4</a>
+                </li>
+                <li>
+                    <a href="#gen5">Gen 5</a>
+                </li>
+                <li>
+                    <a href="#gen6">Gen 6</a>
+                </li>
+                <li>
+                    <a href="#gen7">Gen 7</a>
+                </li>
+                <li>
+                    <a href="#gen8">Gen 8</a>
+                </li>
+            </ul>
+        </nav>
         <section>
             <p>
                 "Gen" is short for "generation" and refers to the time period in which a specific game was released.
             </p>
             <ul>
-                <li id="gen1">1st Gen - Pokemon Red, Blue, Yellow, and Green (Japan Only)
+                <li id="gen1">1st Gen - Pokemon Red, Blue, Yellow
                     <figure>
                         <img src="images/gen_1.png">
                         <figcaption>The Boxart for Gen 1</figcaption>
@@ -71,7 +73,7 @@
                         <figcaption>The Boxart for Gen 2</figcaption>
                     </figure>
                 </li>
-                <li id="gen3">3rd Gen - Pokemon Ruby, Sapphire, and Emerald (Including Omega Ruby and Alpha Sapphire)
+                <li id="gen3">3rd Gen - Pokemon Ruby, Sapphire, and Emerald
                     <figure>
                         <img src="images/gen_3.png">
                         <figcaption>The Boxart for Gen 3</figcaption>
@@ -88,43 +90,43 @@
                         <img src="images/gen_5.png">
                         <figcaption>The Boxart for Gen 5</figcaption>
                     </figure>
-                </li> 
+                </li>
                 <li id="gen6">6th Gen - Pokemon X and Y
                     <figure>
                         <img src="images/gen_6.png">
                         <figcaption>The Boxart for Gen 6</figcaption>
                     </figure>
-                </li>  
+                </li>
                 <lli id="gen7">7th Gen - Pokemon Sun and Moon
                     <figure>
                         <img src="images/gen_7.png">
                         <figcaption>The Boxart for Gen 7</figcaption>
                     </figure>
-                </li>
-                <li id="gen8">8th Gen - Pokemon Sword and Shield
-                    <figure>
-                        <img src="images/gen_8.png">
-                        <figcaption>The Boxart for Gen 8</figcaption>
-                    </figure>
-                </li>
+                    </li>
+                    <li id="gen8">8th Gen - Pokemon Sword and Shield
+                        <figure>
+                            <img src="images/gen_8.png">
+                            <figcaption>The Boxart for Gen 8</figcaption>
+                        </figure>
+                    </li>
             </ul>
         </section>
         <article>
             <p>
-                Each generation brought new features, new Pokemon, and added new ways for 
-                Pokemon to battle and for you to develop your relationship with them. 
+                Each generation brought new features, new Pokemon, and added new ways for
+                Pokemon to battle and for you to develop your relationship with them.
                 But which one is the best to start with?
             </p>
             <p>
-                This is a completely subjective question, and there's really no wrong answer. 
-                The difficulty of the Pokemon series is geared so they can be enjoyed by fans 
-                of all ages, so most people who give the series a try won't find themselves 
-                in a position where they don't know what to do. Newer Pokemon games have 
-                features that make leveling Pokemon and other actions more convenient, but 
+                This is a completely subjective question, and there's really no wrong answer.
+                The difficulty of the Pokemon series is geared so they can be enjoyed by fans
+                of all ages, so most people who give the series a try won't find themselves
+                in a position where they don't know what to do. Newer Pokemon games have
+                features that make leveling Pokemon and other actions more convenient, but
                 there's a lot to be said for starting with the basics.
             </p>
-        <article>
+            <article>
     </div>
-    </body>
+</body>
+
 </html>
-                
