Removed extra "l" from a list item

--- a/generations.html
+++ b/generations.html
@@ -97,7 +97,7 @@
                         <figcaption>The Boxart for Gen 6</figcaption>
                     </figure>
                 </li>
-                <lli id="gen7">7th Gen - Pokemon Sun and Moon
+                <li id="gen7">7th Gen - Pokemon Sun and Moon
                     <figure>
                         <img src="images/gen_7.png">
                         <figcaption>The Boxart for Gen 7</figcaption>
