--- a/generations.html
+++ b/generations.html
@@ -57,9 +57,6 @@
             </ul>
         </nav>
         <section>
-            <p>
-                "Gen" is short for "generation" and refers to the time period in which a specific game was released.
-            </p>
             <ul>
                 <li id="gen1">1st Gen - Pokemon Red, Blue, Yellow
                     <figure>
@@ -113,6 +110,9 @@
         </section>
         <article>
             <p>
+                "Gen" is short for "generation" and refers to the time period in which a specific game was released.
+            </p>
+            <p>
                 Each generation brought new features, new Pokemon, and added new ways for
                 Pokemon to battle and for you to develop your relationship with them.
                 But which one is the best to start with?
@@ -124,6 +124,20 @@
                 in a position where they don't know what to do. Newer Pokemon games have
                 features that make leveling Pokemon and other actions more convenient, but
                 there's a lot to be said for starting with the basics.
+            </p>
+            <p>
+                Throughout each generation, there is usually a theme to the region introduced in a specific generation. 
+                As a result, each region and generation have several key features, such as important Pokémon and places, that 
+                place emphasis on those themes. In particular, the very last Pokémon introduced in that region and in that generation 
+                embody that generation's theme in some way.
+            </p>
+            <p>
+                For example, generation 1 is geared towards science. The starters of the Kanto region, Bulbasaur, Charmander, and Squirtle, 
+                are all based on animals that existed on Earth thousands of years ago (mammalian reptiles, salamanders, and turtles respectively). 
+                Eevee (the Evolution Pokémon) and its first three Eeveelutions were introduced here. There is a museum in Pewter City where fossil 
+                Pokémon may be revived. Porygon, the Virtual Pokémon, is introduced in this generation. Mewtwo is a genetics experiment gone wrong in a 
+                similar vein as Frankenstein. The generation's final two Pokémon, Mewtwo and Mew, embody the two main aspects of science that are covered in that region: 
+                technology and genetics respectively.
             </p>
             <article>
     </div>
