Changed figcaption on starters page and changed figcaption font

--- a/starters.html
+++ b/starters.html
@@ -29,7 +29,7 @@
         <section>
         <figure>
             <img src="images/starters.png">
-            <figcaption>Pokemon Logo</figcaption>
+            <figcaption>Generation 1 Starters</figcaption>
         </figure>
         </section>
         <article>
