Article padding and name change

--- a/generations.html
+++ b/generations.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>What's a 'Gen?'</h1>
+            <h1>The Pokemon Trainer Guide</h1>
         </header>
         <nav class="menu">
             <ul>
@@ -57,6 +57,9 @@
             </ul>
         </nav>
         <section>
+            <header>
+                <h1>What's a 'Gen?'</h1>
+            </header>
             <ul>
                 <li id="gen1">1st Gen - Pokemon Red, Blue, Yellow
                     <figure>
@@ -108,7 +111,7 @@
                     </li>
             </ul>
         </section>
-        <article>
+        <article class = "article_down">
             <p>
                 "Gen" is short for "generation" and refers to the time period in which a specific game was released.
             </p>
