--- a/starters.html
+++ b/starters.html
@@ -1,66 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Pokemeon Starters</title>
-        <link rel="stylesheet" href="css/all_style.css">
-        <link rel="stylesheet" href="css/sub_style.css">
-        <link rel="stylesheet" href="css/navigation.css">
-    </head>
-    <body>
-    <div class = "container">
-    <header>
-        <h1>How to Pick a Starter Pokemon</h1>
-    </header>
-    <nav class = "menu">
-        <ul>
-            <li>
-                <a href="index.html">Guide</a>
-            </li>
-            <li>
-                <a href="generations.html">Generations</a>
-            </li>
-            <li>
-                <a href="starters.html">Starters</a>
-            </li>
-        </ul>
-    </nav>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pokemeon Starters</title>
+    <link rel="stylesheet" href="css/all_style.css">
+    <link rel="stylesheet" href="css/sub_style.css">
+    <link rel="stylesheet" href="css/navigation.css">
+</head>
+
+<body>
+    <div class="container">
+        <header>
+            <h1>How to Pick a Starter Pokemon</h1>
+        </header>
+        <nav class="menu">
+            <ul>
+                <li>
+                    <a href="index.html">Guide</a>
+                </li>
+                <li>
+                    <a href="generations.html">Generations</a>
+                </li>
+                <li>
+                    <a href="starters.html">Starters</a>
+                </li>
+            </ul>
+        </nav>
+        <nav class="table">
+            <ul>
+                <li>
+                    <a href="#gen1">Gen 1</a>
+                </li>
+                <li>
+                    <a href="#gen2">Gen 2</a>
+                </li>
+                <li>
+                    <a href="#gen3">Gen 3</a>
+                </li>
+                <li>
+                    <a href="#gen4">Gen 4</a>
+                </li>
+                <li>
+                    <a href="#gen5">Gen 5</a>
+                </li>
+                <li>
+                    <a href="#gen6">Gen 6</a>
+                </li>
+                <li>
+                    <a href="#gen7">Gen 7</a>
+                </li>
+                <li>
+                    <a href="#gen8">Gen 8</a>
+                </li>
+            </ul>
+        </nav>
         <section>
-        <figure>
-            <img src="images/starters.png">
-            <figcaption>Generation 1 Starters</figcaption>
-        </figure>
+            <ul>
+                <li id="gen1">1st Gen - Bulbasuar, Charmander, Squirle
+                    <figure>
+                        <img src="images/starters_gen1.png">
+                        <figcaption>The Boxart for Gen 1</figcaption>
+                    </figure>
+                </li>
+                <li id="gen2">2nd Gen - Chikorita, Cyndaquil, Todadile
+                    <figure>
+                        <img src="images/starters_gen2.png">
+                        <figcaption>The Boxart for Gen 2</figcaption>
+                    </figure>
+                </li>
+                <li id="gen3">3rd Gen - Treecko, Torchic, Mudkip
+                    <figure>
+                        <img src="images/starters_gen3.png">
+                        <figcaption>The Boxart for Gen 3</figcaption>
+                    </figure>
+                </li>
+                <li id="gen4">4th Gen - Turtwig, Chimchar, Piplup
+                    <figure>
+                        <img src="images/starters_gen4.png">
+                        <figcaption>The Boxart for Gen 4</figcaption>
+                    </figure>
+                </li>
+                <li id="gen5">5th Gen - Snivy, Tepig, Oshawott
+                    <figure>
+                        <img src="images/starters_gen5.png">
+                        <figcaption>The Boxart for Gen 5</figcaption>
+                    </figure>
+                </li>
+                <li id="gen6">6th Gen - Chespin, Fennekin, Froakie
+                    <figure>
+                        <img src="images/starters_gen6.png">
+                        <figcaption>The Boxart for Gen 6</figcaption>
+                    </figure>
+                </li>
+                <li id="gen7">7th Gen - Rowlet, Litten, Popplio
+                    <figure>
+                        <img src="images/starters_gen7.png">
+                        <figcaption>The Boxart for Gen 7</figcaption>
+                    </figure>
+                    </li>
+                    <li id="gen8">8th Gen - Grookeyt, Scorbunny, Sobble
+                        <figure>
+                            <img src="images/starters_gen8.png">
+                            <figcaption>The Boxart for Gen 8</figcaption>
+                        </figure>
+                    </li>
+            </ul>
         </section>
         <article>
-                <p>
-                    Starter Pokémon, or Starters, are the Pokémon a Trainer chooses at the 
-                    beginning of their Pokémon journey and the main protagonists of the Pokémon 
-                    series of games. In each generation of Pokémon games, a set of Starter Pokémon 
-                    are available for new Trainers to choose from in sets of three; the types that 
-                    make up these sets are Fire, Grass, and Water. Each starter Pokémon has three 
-                    evolutionary forms.
-                    Picking a Pokémon to start off any game can be difficult. But There
-                    are no "right" starter Pokemon to choose.
-                </p>
-                <p>
-                    Before picking a starter, onsider your play style and game type.
-                    If you choose melee, go for the fire-type. They can learn many strong melee moves.
-                    If you go for tactical (ranged, in other games) then choose water-type. 
-                    They are very good at not making melee contact with enemies, 
-                    giving them an advantage over Pokémon that rely on abilities like rough skin.
-                    If you prefer taking advantage of the enemies' weaknesses, then use the 
-                    grass-type. They have moves such as leech seed that drain equal 
-                    amounts of health regardless of type and level.
-                </p>
-                <p>
-                    If the starter Pokémon, after evolving, gets an additional type for itself 
-                    (like Charmeleon gets Fire and Flying-type after it evolves into Charizard 
-                    and Mudkip gets Water and Ground-type after it evolves into a Marshtomp), 
-                    you may think about preferring that Pokémon because it may cover up many of 
-                    its weaknesses.
-                </p>
+            <p>
+                Starter Pokémon, or Starters, are the Pokémon a Trainer chooses at the
+                beginning of their Pokémon journey and the main protagonists of the Pokémon
+                series of games. In each generation of Pokémon games, a set of Starter Pokémon
+                are available for new Trainers to choose from in sets of three; the types that
+                make up these sets are Fire, Grass, and Water. Each starter Pokémon has three
+                evolutionary forms.
+                Picking a Pokémon to start off any game can be difficult. But There
+                are no "right" starter Pokemon to choose.
+            </p>
+            <p>
+                Before picking a starter, onsider your play style and game type.
+                If you choose melee, go for the fire-type. They can learn many strong melee moves.
+                If you go for tactical (ranged, in other games) then choose water-type.
+                They are very good at not making melee contact with enemies,
+                giving them an advantage over Pokémon that rely on abilities like rough skin.
+                If you prefer taking advantage of the enemies' weaknesses, then use the
+                grass-type. They have moves such as leech seed that drain equal
+                amounts of health regardless of type and level.
+            </p>
+            <p>
+                If the starter Pokémon, after evolving, gets an additional type for itself
+                (like Charmeleon gets Fire and Flying-type after it evolves into Charizard
+                and Mudkip gets Water and Ground-type after it evolves into a Marshtomp),
+                you may think about preferring that Pokémon because it may cover up many of
+                its weaknesses.
+            </p>
         </article>
     </div>
-    </body>
+</body>
+
 </html>
