--- a/starters.html
+++ b/starters.html
@@ -108,7 +108,7 @@
                     </li>
             </ul>
         </section>
-        <article>
+        <article class = "article_spacing">
             <p>
                 Starter Pokémon, or Starters, are the Pokémon a Trainer chooses at the
                 beginning of their Pokémon journey and the main protagonists of the Pokémon
