Added sub titles and stuff

--- a/generations.html
+++ b/generations.html
@@ -111,6 +111,9 @@
                 </li>
             </ul>
         </section>
+        <header class="page">
+            <h1>Pokemon Generations</h1>
+        </header>
         <article class = "article_down">
             <p>
                 "Gen" is short for "generation" and refers to the time period in which a specific game was released.
