--- a/starters.html
+++ b/starters.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>How to Pick a Starter Pokemon</h1>
+            <h1>The Pokemon Trainer Guide</h1>
         </header>
         <nav class="menu">
             <ul>
@@ -100,6 +100,9 @@
                     </li>
             </ul>
         </section>
+        <header class="page">
+            <h1>How to Pick a Starter Pokemon</h1>
+        </header>
         <article class = "article_spacing">
             <p>
                 Starter Pokémon, or Starters, are the Pokémon a Trainer chooses at the
