Added text to starters

--- a/generations.html
+++ b/generations.html
@@ -149,7 +149,7 @@
                 aspects of science that are covered in that region:
                 technology and genetics respectively.
             </p>
-            <article>
+        </article>
     </div>
 </body>
 
