--- a/starters.html
+++ b/starters.html
@@ -60,42 +60,42 @@
             <ul>
                 <li id="gen1">1st Gen - Bulbasuar, Charmander, Squirle
                     <figure>
-                        <img src="images/starters_gen1.png">
+                        <img src="images/starters_gen1.png" alt="gen 1 starters">
                     </figure>
                 </li>
                 <li id="gen2">2nd Gen - Chikorita, Cyndaquil, Todadile
                     <figure>
-                        <img src="images/starters_gen2.png">
+                        <img src="images/starters_gen2.png" alt="gen 2 starters">
                     </figure>
                 </li>
                 <li id="gen3">3rd Gen - Treecko, Torchic, Mudkip
                     <figure>
-                        <img src="images/starters_gen3.png">
+                        <img src="images/starters_gen3.png" alt="gen 3 starters">
                     </figure>
                 </li>
                 <li id="gen4">4th Gen - Turtwig, Chimchar, Piplup
                     <figure>
-                        <img src="images/starters_gen4.png">
+                        <img src="images/starters_gen4.png" alt="gen 4 starters">
                     </figure>
                 </li>
                 <li id="gen5">5th Gen - Snivy, Tepig, Oshawott
                     <figure>
-                        <img src="images/starters_gen5.png">
+                        <img src="images/starters_gen5.png" alt="gen 5 starters">
                     </figure>
                 </li>
                 <li id="gen6">6th Gen - Chespin, Fennekin, Froakie
                     <figure>
-                        <img src="images/starters_gen6.png">
+                        <img src="images/starters_gen6.png" alt="gen 6starters">
                     </figure>
                 </li>
                 <li id="gen7">7th Gen - Rowlet, Litten, Popplio
                     <figure>
-                        <img src="images/starters_gen7.png">
+                        <img src="images/starters_gen7.png" alt="gen 7 starters">
                     </figure>
                     </li>
                     <li id="gen8">8th Gen - Grookeyt, Scorbunny, Sobble
                         <figure>
-                            <img src="images/starters_gen8.png">
+                            <img src="images/starters_gen8.png" alt="gen 8 starters">
                         </figure>
                     </li>
             </ul>
