--- a/generations.html
+++ b/generations.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>The Pokemon Trainer Guide</h1>
+            <h1>The Pokemon Trainer's Guide</h1>
         </header>
         <nav class="menu">
             <ul>
